2019-12-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

	* DESCRIPTION (Suggests): Remove knitr, rmarkdown, pinp
	* DESCRIPTION (VignetteBuilder): Remove knitr

2019-11-26  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_embedded_r.R: Use sink to suppress noisy output,
	reenable tests (still conditional on usual environment variable)

2019-11-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/cpp/Vector.cpp (no_op): Suppress compiler warning

2019-11-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Suggests): Add tinytest, remove RUnit

	* tests/doRUnit.R: Removed
	* tests/tinytest.R: Added

	* tests/tinytest.R: Converted from RUnit to tinytest
 	* inst/tinytest/test_algorithm.R: Idem
 	* inst/tinytest/test_as.R: Idem
	* inst/tinytest/test_binary_package.R: Idem (but inactive for now)
	* inst/tinytest/test_client_package.R: Idem (but inactive for now)
	* inst/tinytest/test_dataframe.R: Idem
	* inst/tinytest/test_date.R: Idem (but condition two test sets on TZ)
	* inst/tinytest/test_dispatch.R: Idem
	* inst/tinytest/test_embedded.R: Idem
	* inst/tinytest/test_environments.R: Idem
	* inst/tinytest/test_exceptions.R: Idem
	* inst/tinytest/test_exceptions_nocall.R: Idem
	* inst/tinytest/test_expose_class.R: Idem
	* inst/tinytest/test_function.R: Idem
	* inst/tinytest/test_interface.R: Idem (but inactive for now)
	* inst/tinytest/test_internal_function.R: Idem
	* inst/tinytest/test_internal_function_cpp11.R: Idem
	* inst/tinytest/test_language.R: Idem
	* inst/tinytest/test_listof.R: Idem
	* inst/tinytest/test_matrix.R: Idem
	* inst/tinytest/test_misc.R: Idem
	* inst/tinytest/test_modref.R: Idem
	* inst/tinytest/test_module.R: Idem
	* inst/tinytest/test_module_client_package.R: Idem
	* inst/tinytest/test_na.R: Idem
	* inst/tinytest/test_quickanddirty.R: Idem
	* inst/tinytest/test_rcpp_package_skeleton.R: Idem
	* inst/tinytest/test_reference.R: Idem