@@ -8,20 +8,13 @@ LABEL org.label-schema.license="GPL-2.0" \
 
 RUN apt-get update \
         && apt-get install -y --no-install-recommends \
-                r-cran-runit \
                 r-cran-inline \
-                r-cran-rmarkdown \
-                r-cran-knitr \
                 r-cran-pkgkitten \
-                r-cran-curl \
-                r-cran-openssl \
-                r-cran-httr \
-                r-cran-lazyeval \
-                r-cran-withr \
                 git \
-        && install.r rbenchmark pinp covr tinytest
+        && install.r covr rbenchmark tinytest
 
 ENV _R_CHECK_FORCE_SUGGESTS_ FALSE
+ENV _R_CHECK_TESTS_NLINES_ 0
 ENV RunAllRcppTests yes
 
 CMD ["bash"]
