@@ -8,9 +8,17 @@ LABEL org.label-schema.license="GPL-2.0" \
 
 RUN apt-get update \
         && apt-get install -y --no-install-recommends \
+                r-cran-curl \
+                r-cran-httr \
+                r-cran-knitr \
+                r-cran-lazyeval \
+                r-cran-openssl \
                 r-cran-rcpparmadillo \
                 r-cran-rcppeigen \
                 r-cran-rcppgsl \
-        && install.r microbenchmark BH
+                r-cran-rmarkdown \
+                r-cran-runit \
+                r-cran-withr \
+        && install.r BH microbenchmark pinp
 
 CMD ["bash"]
